--- a/src/Translations/en/en/global.json
+++ b/src/Translations/en/en/global.json
@@ -38,6 +38,8 @@
     "Message:" : "Message:" ,
     "Send-Email" : "Send Email" ,
     "Status:" : "Status:" ,
-    "I-know-how-to-use" : "I know how to use"
+    "I-know-how-to-use" : "I know how to use" ,
+    "Play-with-a-partner-or-with-the-computer." : "Play with a partner or with the computer." ,
+    "Have-fun-playing-this-classic-snake-game." : "Have fun playing this classic snake game"
     }
 }
